<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:layout_margin="5dp"
    android:id="@+id/one_news_at_list">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/data_list"
            android:id="@+id/data_list"
            android:textSize="13sp"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:gravity="left"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_title_list"
            android:id="@+id/news_title_list"
            android:textSize="20sp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="left"
            android:textStyle="bold"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:id="@+id/category"
        android:textSize="15sp"
        android:layout_gravity="left"/>

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="2dp"-->
        <!--android:background="@android:color/secondary_text_light_nodisable"-->
       <!--/>-->
</LinearLayout>